# imageSync

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml
src/: main.rs
